--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -6,10 +6,12 @@ html {
   box-sizing: border-box;
   background-image: url("/background-image-final.png");
   background-size: cover;
+  background-position: center;
   background-color: #e2fcef;
   background-repeat: no-repeat;
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
 }
 
 .app-container {
